; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_astats.c_set_meta.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_astats.c_set_meta.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [19 x i8] c"lavfi.astats.%d.%s\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"lavfi.astats.%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32**, i32, i8*, i8*, double)* @set_meta to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_meta(i32** %0, i32 %1, i8* %2, i8* %3, double %4) #0 {
  %6 = alloca i32**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca double, align 8
  %11 = alloca [128 x i32], align 16
  %12 = alloca [128 x i32], align 16
  store i32** %0, i32*** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store double %4, double* %10, align 8
  %13 = getelementptr inbounds [128 x i32], [128 x i32]* %11, i64 0, i64 0
  %14 = load i8*, i8** %9, align 8
  %15 = load double, double* %10, align 8
  %16 = call i32 (i32*, i32, i8*, ...) @snprintf(i32* %13, i32 512, i8* %14, double %15)
  %17 = load i32, i32* %7, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %5
  %20 = getelementptr inbounds [128 x i32], [128 x i32]* %12, i64 0, i64 0
  %21 = load i32, i32* %7, align 4
  %22 = load i8*, i8** %8, align 8
  %23 = call i32 (i32*, i32, i8*, ...) @snprintf(i32* %20, i32 512, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %21, i8* %22)
  br label %28

24:                                               ; preds = %5
  %25 = getelementptr inbounds [128 x i32], [128 x i32]* %12, i64 0, i64 0
  %26 = load i8*, i8** %8, align 8
  %27 = call i32 (i32*, i32, i8*, ...) @snprintf(i32* %25, i32 512, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i8* %26)
  br label %28

28:                                               ; preds = %24, %19
  %29 = load i32**, i32*** %6, align 8
  %30 = getelementptr inbounds [128 x i32], [128 x i32]* %12, i64 0, i64 0
  %31 = getelementptr inbounds [128 x i32], [128 x i32]* %11, i64 0, i64 0
  %32 = call i32 @av_dict_set(i32** %29, i32* %30, i32* %31, i32 0)
  ret void
}

declare dso_local i32 @snprintf(i32*, i32, i8*, ...) #1

declare dso_local i32 @av_dict_set(i32**, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
